--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,32 @@
                     <div class="box__item">roman</div>
                     <div class="box__item">crusdar</div>
                 <div class="box">
-                    <div class="box__item generate">generate</div>
+                    <div class="box__generate">generate</div>
                 </div>
             </section>
             <section class="art">
-                <h1>Art</h1>
+                <div class="art__wrapper">
+                    <div class="painting" data-id="1">
+                        <img src="https://images-na.ssl-images-amazon.com/images/I/81HOBLQO%2BgL._SY679_.jpg">
+                    </div>
+                    <div class="painting" data-id="2">
+                        <img src="https://storage.googleapis.com/ehimages/2017/10/25/img_942b5703ed4c5d3b242a34f7cc87d9c0_1508933938684_processed_original.jpg">
+                    </div>
+                    <div class="painting" data-id="3">
+                        <img src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1276619-567973-14.jpg">
+                    </div>
+                    <div class="painting" data-id="4">
+                        <img src="https://images-na.ssl-images-amazon.com/images/I/81HOBLQO%2BgL._SY679_.jpg">
+                    </div>
+                    <div class="painting" data-id="5">
+                        <img src="https://storage.googleapis.com/ehimages/2017/10/25/img_942b5703ed4c5d3b242a34f7cc87d9c0_1508933938684_processed_original.jpg">
+                    </div>
+                </div>
             </section>
             <section class="info">
                 <div class="year">1888</div>
                 <div class="circle__wrapper">
-                    <div class="circle">
+                    <div class="circle circle__left">
                         <ion-icon class="circle__icon" name="arrow-back"></ion-icon>
                     </div>
                 </div>
@@ -46,7 +62,7 @@
                     <h5 class="content__h5">Self-Portrait Dedicated to Paul Gauguin</h5>
                 </div>
                 <div class="circle__wrapper">
-                    <div class="circle">
+                    <div class="circle circle__right">
                         <ion-icon class="circle__icon" name="arrow-back"></ion-icon>
                     </div>
                 </div>
@@ -55,6 +71,5 @@
     </div>
     
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
-    <script src="./js/bundle.js"></script>
 </body>
 </html>
