--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Art app</title>
-    <link rel="stylesheet" href="./css/main.scss">
 </head>
 <body>
     
@@ -16,17 +15,8 @@
                 recommendations. Then like or dislike art to improve
                 your recommendations.
                 </p>
-                <h6 class="settings__h6">Classification</h6>
-                    <div class="box__item active">history</div>
-                    <div class="box__item">portrait</div>
-                    <div class="box__item">landscape</div>
-                    <div class="box__item">still life</div>
-                    <div class="box__item">genre</div>
-                <h6 class="settings__h6">Period</h6>
-                    <div class="box__item active">modern</div>
-                    <div class="box__item">imperial</div>
-                    <div class="box__item">roman</div>
-                    <div class="box__item">crusdar</div>
+                <h6 class="settings__h6 classification">Classification</h6>
+                <h6 class="settings__h6 century">Century</h6>
                 <div class="box">
                     <div class="box__generate">generate</div>
                 </div>
@@ -70,6 +60,7 @@
         </main>
     </div>
     
-    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+
 </body>
 </html>
