--- a/src/index.html
+++ b/src/index.html
@@ -23,19 +23,19 @@
             </section>
             <section class="art">
                 <div class="art__wrapper">
-                    <div class="painting" data-id="1">
+                    <div class="painting frame" data-id="1">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/81HOBLQO%2BgL._SY679_.jpg">
                     </div>
-                    <div class="painting" data-id="2">
+                    <div class="painting frame" data-id="2">
                         <img src="https://storage.googleapis.com/ehimages/2017/10/25/img_942b5703ed4c5d3b242a34f7cc87d9c0_1508933938684_processed_original.jpg">
                     </div>
-                    <div class="painting" data-id="3">
+                    <div class="painting frame" data-id="3">
                         <img src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1276619-567973-14.jpg">
                     </div>
-                    <div class="painting" data-id="4">
+                    <div class="painting frame" data-id="4">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/81HOBLQO%2BgL._SY679_.jpg">
                     </div>
-                    <div class="painting" data-id="5">
+                    <div class="painting frame" data-id="5">
                         <img src="https://storage.googleapis.com/ehimages/2017/10/25/img_942b5703ed4c5d3b242a34f7cc87d9c0_1508933938684_processed_original.jpg">
                     </div>
                 </div>
@@ -48,8 +48,8 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h2 class="content__h2">Vincent van Gogh</h2>
-                    <h5 class="content__h5">Self-Portrait Dedicated to Paul Gauguin</h5>
+                    <h2 class="content__h2">Retrieving artwork ..</h2>
+                    <h5 class="content__h5">Please wait ..</h5>
                 </div>
                 <div class="circle__wrapper">
                     <div class="circle circle__right">
