--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,23 @@
                 <div class="art__wrapper">
                     <div class="painting frame" data-id="1">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/81HOBLQO%2BgL._SY679_.jpg">
+                        <div class="like"><ion-icon name="heart-empty"></ion-icon></div>
                     </div>
                     <div class="painting frame" data-id="2">
                         <img src="https://storage.googleapis.com/ehimages/2017/10/25/img_942b5703ed4c5d3b242a34f7cc87d9c0_1508933938684_processed_original.jpg">
+                        <div class="like"><ion-icon name="heart-empty"></ion-icon></div>
                     </div>
                     <div class="painting frame" data-id="3">
                         <img src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1276619-567973-14.jpg">
+                        <div class="like"><ion-icon name="heart-empty"></ion-icon></div>
                     </div>
                     <div class="painting frame" data-id="4">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/81HOBLQO%2BgL._SY679_.jpg">
+                        <div class="like"><ion-icon name="heart-empty"></ion-icon></div>
                     </div>
                     <div class="painting frame" data-id="5">
                         <img src="https://storage.googleapis.com/ehimages/2017/10/25/img_942b5703ed4c5d3b242a34f7cc87d9c0_1508933938684_processed_original.jpg">
+                        <div class="like"><ion-icon name="heart-empty"></ion-icon></div>
                     </div>
                 </div>
             </section>
